testsuite/poke.pkl/cast-diag-2.pk
/* { dg-do compile } */

defvar v = 10 as fun()void:; /* { dg-error "" } */
